# pyobfuscator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SECURITY_ASSURANCE_REPORT.md  _test_output.txt  git_output.txt  publish.py  pyproject.toml  test_results.txt  test_results_full.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
benchmarks/: performance_suite.py  red_team_eval.py  results.json  security_resistance.json
docs/: RESEARCH_PAPER.md  TECHNICAL_DOCUMENTATION.md  USE_CASES.md  WHITEPAPER.md  references.bib
examples/: __init__.py  demo.py  demo_pyd_protection.py  demo_runtime_protection.py  obfuscate_dashboard.py  obfuscate_project.py  protect_dashboard.py  protect_project.py  pyobfuscator.json  tests.py
features/: obfuscation.feature
features/steps/: obfuscator_steps.py
pyobfuscate/: README.md  __init__.py  __main__.py  cli.py  crypto.py  obfuscator.py  pyd_protection.py  runtime_protection.py  transformers.py  utils.py
pyobfuscator/: README.md  __init__.py  analyzer.py  cli.py  constants.py  crypto.py  exceptions.py  obfuscator.py  protocols.py  pyd_protection.py  runtime_protection.py  transformers.py  utils.py
pyobfuscator/analysis/: red_team.py  security_auditor.py
pyobfuscator/config/: __init__.py  builder.py  presets.py
pyobfuscator/core/: __init__.py  context.py  name_generator.py  pipeline.py  registry.py
pyobfuscator/core/transformers/: __init__.py  base.py  code_cleaner.py  control_flow.py  integrity.py  literal_obfuscator.py  name_transformer.py  string_obfuscator.py  virtual_machine.py
pyobfuscator/crypto/: __init__.py  whitebox.py
pyobfuscator/infrastructure/: file_processor.py  virtual_fs.py
pyobfuscator/protection/: __init__.py
pyobfuscator/utils/: __init__.py  ast_utils.py  file_utils.py
tests/: test_advanced_transformers.py  test_architecture.py  test_comprehensive.py  test_e2e_integration.py  test_fuzzing.py  test_properties.py  test_pyobfuscate.py  test_virtualization.py  test_whitebox.py
