[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobfuscate"
version = "1.0.0"
description = "A Python code obfuscation library with advanced runtime protection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PyObfuscate Team"}
]
keywords = ["obfuscation", "protection", "encryption", "bytecode", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0.0"]
pyd = ["cython>=3.0.0"]
all = ["cryptography>=41.0.0", "cython>=3.0.0"]

[project.scripts]
pyobfuscate = "pyobfuscate.cli:main"

[project.urls]
Homepage = "https://github.com/esgaltur/pyobfuscate"
Documentation = "https://github.com/esgaltur/pyobfuscate#readme"
Repository = "https://github.com/esgaltur/pyobfuscate"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyobfuscate*"]
exclude = ["examples*"]

[tool.setuptools.package-data]
pyobfuscate = ["README.md"]
