[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobfuscate"
version = "1.0.0"
description = "A Python code obfuscation library with advanced runtime protection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dmitrij Sosnovic", email = "dmitriy@sosnovich.com"}
]
keywords = ["obfuscation", "protection", "encryption", "bytecode", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=41.0.0"]
pyd = ["cython>=3.0.0"]
all = ["cryptography>=41.0.0", "cython>=3.0.0"]

[project.scripts]
pyobfuscate = "pyobfuscate.cli:main"

[project.urls]
Homepage = "https://github.com/esgaltur/pyobfuscator"
Documentation = "https://github.com/esgaltur/pyobfuscator#readme"
Repository = "https://github.com/esgaltur/pyobfuscator"
Issues = "https://github.com/esgaltur/pyobfuscator/issues"
Changelog = "https://github.com/esgaltur/pyobfuscator/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyobfuscate*"]
exclude = ["examples*"]

[tool.setuptools.package-data]
pyobfuscator = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 120

