[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobfuscator"
version = "2.0.0"
description = "A Python code obfuscation library with advanced runtime protection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Dmitrij Sosnovic", email = "dmitriy@sosnovich.com"}
]
keywords = ["obfuscation", "protection", "encryption", "bytecode", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

dependencies = []

[project.optional-dependencies]
crypto = ["cryptography>=46.0.7"]
pyd = ["cython>=3.0.0"]
all = ["cryptography>=46.0.7", "cython>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=7.0.0",
    "pre-commit>=3.0.0",
    "hypothesis>=6.0.0",
    "bandit>=1.7.0",
]

[project.scripts]
pyobfuscator = "pyobfuscator.cli:main"

[project.urls]
Homepage = "https://github.com/esgaltur/pyobfuscator"
Documentation = "https://github.com/esgaltur/pyobfuscator#readme"
Repository = "https://github.com/esgaltur/pyobfuscator"
Issues = "https://github.com/esgaltur/pyobfuscator/issues"
Changelog = "https://github.com/esgaltur/pyobfuscator/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyobfuscator*"]
exclude = ["examples*"]

[tool.setuptools.package-data]
pyobfuscator = ["README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 120

